# rust-calendar

./: .env  .gitmodules  Cargo.toml  Dockerfile  Procfile  RustConfig  readme.md
assets/: calendar-frontend.js  calendar-frontend_bg.wasm  index.html  sw.js
migrations/2022-01-01-085141_init/: down.sql  up.sql
migrations/2022-12-31-174041_auth/: down.sql  up.sql
migrations/2023-01-07-204820_passwords_check/: down.sql  up.sql
migrations/2023-01-07-205154_add_roles/: down.sql  up.sql
migrations/2023-01-07-205159_add_admin/: down.sql  up.sql
migrations/2023-02-22-102403_passwords_rework/: down.sql  up.sql
migrations/2023-02-25-100006_event_plan/: down.sql  up.sql
migrations/2023-03-04-095738_event_visibility/: down.sql  up.sql
migrations/2023-03-09-200918_roles/: up.sql
migrations/2023-03-09-201010_admin/: down.sql  up.sql
migrations/2023-03-20-202618_password_hashing/: down.sql  up.sql
migrations/2023-07-23-091355_demo_account/: down.sql  up.sql
migrations/2023-12-15-121015_views/: down.sql  up.sql
migrations/2023-12-15-122252_triggers/: down.sql  up.sql
migrations/2023-12-15-124459_functions/: down.sql  up.sql
migrations/2024-05-13-120925_sharing/: down.sql  up.sql
src/: error.rs  main.rs  state.rs
src/api/: auth.rs  event_templates.rs  events.rs  jwt.rs  mod.rs  roles.rs  schedules.rs  user_roles.rs  utils.rs
src/api/handlers/: auth.rs  event_templates.rs  events.rs  mod.rs  other.rs  permissions.rs  roles.rs  schedules.rs  user_roles.rs  user_state.rs  users.rs  utils.rs
src/db/: connection.rs  mod.rs  schema.rs  session_info.rs  utils.rs
src/db/queries/: access_level.rs  event.rs  event_plan.rs  event_template.rs  granted_permission.rs  mod.rs  password.rs  permissions.rs  role.rs  schedule.rs  session.rs  user.rs  user_role.rs
src/db/types/: event.rs  event_plan.rs  event_template.rs  granted_permission.rs  mod.rs  password.rs  permission.rs  role.rs  schedule.rs  session.rs  user.rs  (+1 more)
src/requests/: access_levels.rs  event_plans.rs  event_templates.rs  events.rs  granted_permissions.rs  mod.rs  passwords.rs  roles.rs  schedules.rs  users.rs
